--- a/src/components/lib/Heading/Heading.module.scss
+++ b/src/components/lib/Heading/Heading.module.scss
@@ -3,7 +3,7 @@
 }
 
 .h2 {
-  @apply font-josefinSans text-xl font-black lg:text-4xl;
+  @apply font-josefinSans text-2xl font-black lg:text-4xl;
 }
 
 .h3 {
