--- a/src/components/lib/Button/Button.module.scss
+++ b/src/components/lib/Button/Button.module.scss
@@ -22,7 +22,7 @@
 
 .variant {
   &__solid {
-    @apply bg-cci-black text-white hover:bg-cci-black/70 
+    @apply border-2 border-transparent bg-cci-black text-white hover:bg-cci-black/70 
     disabled:bg-gray-300 disabled:text-gray-500;
   }
 
