--- a/src/layouts/Home/HomeBg.module.scss
+++ b/src/layouts/Home/HomeBg.module.scss
@@ -1,7 +1,13 @@
 .main {
   position: relative;
-  background-image: url('../../../public/assets/images/homeBg.png');
+  background-image: url('../../../public/assets/images/homeBgMobile.png');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+}
+
+@media only screen and (min-width: 768px) {
+  .main {
+    background-image: url('../../../public/assets/images/homeBg.png');
+  }
 }
