feat: follow up leader profile and cci info

--- a/src/components/lib/Input/Input.module.scss
+++ b/src/components/lib/Input/Input.module.scss
@@ -1,5 +1,5 @@
 .base {
-  @apply block w-full border-0 border-b border-cci-grey px-0 pb-1 font-lato text-cci-grey focus:border-b-2 focus:border-b-cci-grey focus:outline-0;
+  @apply block w-full border-0 border-b border-cci-grey bg-transparent px-0 pb-1 font-lato text-cci-grey focus:border-b-2 focus:border-b-cci-grey focus:outline-0;
 }
 
 .label {
