--- a/src/components/lib/Input/Input.module.scss
+++ b/src/components/lib/Input/Input.module.scss
@@ -1,5 +1,7 @@
 .base {
-  @apply block w-full border-0 border-b border-cci-grey bg-transparent px-0 pb-1 font-lato text-cci-grey focus:border-b-2 focus:border-b-cci-grey focus:outline-0;
+  @apply block w-full border-0 border-b border-cci-grey bg-transparent px-0 pb-1 font-lato 
+  text-cci-grey focus:border-b-2 focus:border-b-cci-grey focus:outline-0 
+  disabled:cursor-not-allowed disabled:bg-gray-100;
 }
 
 .label {
