--- a/src/components/lib/Checkbox/Checkbox.module.scss
+++ b/src/components/lib/Checkbox/Checkbox.module.scss
@@ -3,8 +3,18 @@
 }
 
 .input {
-  @apply h-4 w-4 rounded border-cci-black bg-gray-100 text-primary-main 
-  focus:ring-2 focus:ring-primary-light;
+  @apply cursor-pointer;
+}
+
+.theme {
+  &__wine {
+    @apply h-4 w-4 rounded border-cci-black bg-gray-100 text-primary-main 
+    focus:ring-2 focus:ring-primary-light;
+  }
+
+  &__darkBlack {
+    @apply h-4 w-4 rounded border-cci-black bg-gray-100 text-cci-black focus:ring-black;
+  }
 }
 
 .label {
