--- a/src/components/lib/AttendanceCard/Extra/AttendanceCardExtra.module.scss
+++ b/src/components/lib/AttendanceCard/Extra/AttendanceCardExtra.module.scss
@@ -2,6 +2,11 @@
   background: #ffffff;
   border: 2px solid rgba(104, 104, 104, 0.15);
   border-radius: 15px;
+  position: relative;
+
+  @media only screen and (min-width: 768px) {
+    min-width: 160px;
+  }
 }
 
 .date_container {
