--- a/src/components/lib/AttendanceCard/Extra/AttendanceCardExtra.module.scss
+++ b/src/components/lib/AttendanceCard/Extra/AttendanceCardExtra.module.scss
@@ -3,6 +3,10 @@
   border: 2px solid rgba(104, 104, 104, 0.15);
   border-radius: 15px;
   position: relative;
+  flex: 1;
+  display: grid;
+  justify-items: center;
+  height: auto;
 
   @media only screen and (min-width: 768px) {
     min-width: 160px;
