--- a/src/components/lib/AttendanceCard/Main/AttendanceCard.module.scss
+++ b/src/components/lib/AttendanceCard/Main/AttendanceCard.module.scss
@@ -3,9 +3,11 @@
   border: 2px solid rgba(104, 104, 104, 0.15);
   border-radius: 15px;
   margin: 1.5em 0;
+  flex: 1;
+  display: flex;
+  justify-content: center;
 
   @media only screen and (min-width: 768px) {
-    width: max-content;
     margin: 0;
   }
 }
