--- a/src/components/lib/TabView/TabView.module.scss
+++ b/src/components/lib/TabView/TabView.module.scss
@@ -3,8 +3,20 @@
   border-cci-black/20 bg-[#fafafa] p-5 lg:gap-10 lg:p-10;
 }
 
+.wrapper {
+  width: 100%;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr auto;
+
+  @media screen and (max-width: 767px) {
+    grid-template-columns: 1fr;
+    justify-items: start;
+  }
+}
+
 .header {
-  @apply flex w-full flex-col items-center gap-3 overflow-hidden md:flex-row md:gap-5 lg:gap-10;
+  @apply flex w-full flex-col items-center gap-3 overflow-hidden md:flex-1 md:flex-row md:gap-5 lg:gap-10;
 }
 
 .overflow {
@@ -34,6 +46,10 @@
 
 .action__button {
   @apply order-1 mb-2 self-end rounded-md border border-cci-grey-dim/20 bg-white py-2 px-4 font-bold md:order-2;
+}
+
+.right__component {
+  @apply order-1 mb-2 md:order-2;
 }
 
 .content {
