feat: workers UI && API integration

--- a/src/components/lib/TabView/TabView.module.scss
+++ b/src/components/lib/TabView/TabView.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply grid w-full gap-5 rounded-md border 
+  @apply relative grid w-full gap-5 rounded-md border 
   border-cci-black/20 bg-[#fafafa] p-5 lg:gap-10 lg:p-10;
 }
 
