fix: merged staging && added a media query for extra small screens on TabView

--- a/src/components/lib/TabView/TabView.module.scss
+++ b/src/components/lib/TabView/TabView.module.scss
@@ -1,6 +1,10 @@
 .container {
   @apply relative grid w-full gap-5 rounded-md border 
   border-cci-black/20 bg-[#fafafa] p-5 lg:gap-10 lg:p-10;
+
+  @media only screen and (max-width: 376px) {
+    @apply p-3;
+  }
 }
 
 .wrapper {
