--- a/src/components/lib/AttendanceCard/Extra/AttendanceCardExtra.module.scss
+++ b/src/components/lib/AttendanceCard/Extra/AttendanceCardExtra.module.scss
@@ -4,9 +4,9 @@
   border-radius: 15px;
   position: relative;
   flex: 1;
-  display: grid;
   justify-items: center;
   height: auto;
+  min-width: 50%;
 
   @media only screen and (min-width: 768px) {
     min-width: 160px;
