--- a/src/components/lib/Input2/Input2.module.scss
+++ b/src/components/lib/Input2/Input2.module.scss
@@ -1,5 +1,5 @@
 .base {
-  @apply block w-full h-full border border-cci-grey-light rounded-[10px] bg-white px-0 pb-1 font-lato 
+  @apply block w-full h-full border  rounded-[10px] bg-white px-0 pb-1 font-lato 
   text-cci-grey focus:border-2 focus:border-cci-grey focus:outline-0 
   disabled:cursor-not-allowed disabled:bg-gray-100 px-3;
 }
