--- a/src/components/lib/Button/Button.module.scss
+++ b/src/components/lib/Button/Button.module.scss
@@ -31,4 +31,10 @@
     hover:border-primary-main/30 hover:bg-primary-main/10 
     disabled:border-gray-500 disabled:text-gray-500;
   }
+
+  &__outline_red {
+    @apply border border-cci-red bg-transparent text-cci-red
+    hover:border-primary-main/30 hover:bg-primary-main/10 
+    disabled:border-gray-500 disabled:text-gray-500;
+  }
 }
