fix: props errors

--- a/src/components/lib/Input2/Input2.module.scss
+++ b/src/components/lib/Input2/Input2.module.scss
@@ -1,7 +1,7 @@
 .base {
-  @apply block w-full h-full border rounded-[10px] bg-white px-0 pb-1 font-lato 
-  text-cci-grey focus:border-2 focus:border-cci-grey focus:outline-0 
-  disabled:cursor-not-allowed disabled:bg-gray-100 px-3;
+  @apply block h-full w-full rounded-[10px] border bg-white p-2  
+  font-lato text-cci-grey focus:border-2 focus:border-cci-grey 
+  focus:outline-0 disabled:cursor-not-allowed disabled:bg-gray-100;
 }
 
 .variant {
